# autoresearch

./: .swarm_train_status.json  .swarm_worker_id  README.md  SWARM.md  prepare.py  program_swarm.md  pyproject.toml  train.py
.cursor/rules/: swarm-architecture.mdc  testing-requirements.mdc
docs/: ui-mockup.html
docs/plans/: fork_viz_+_swarm_f1f60bbf.plan.md  model_tab_plan.md  swarm_ui_dashboard.plan.md
runs/: swarm.db
runs/experiments/0a93010ade8c/dataset/: data.jsonl
swarm/: __main__.py  agent.py  db.py  orchestrator.py  schema.sql  worker.py
swarm/static/: style.css
swarm/templates/: base.html  experiment_detail.html  experiments.html
swarm/templates/partials/: experiments_table.html  stat_boxes.html  stats_card.html  trials_table.html  workers_table.html
tests/: conftest.py  test_agent.py  test_api.py  test_delete_experiment.py  test_duplicate_workers.py  test_e2e.py  test_full_loop.py  test_git_ops.py  test_model_api.py  test_real_training.py  test_stale.py  test_ui_playwright.py
tests/e2e/toy_next_number/: prompt.txt  train.py
