[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
]

[project.optional-dependencies]
swarm = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "structlog>=24.4.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[project.scripts]
swarm-orchestrator = "swarm.orchestrator:cli_main"
swarm-worker = "swarm.worker:cli_main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests",
    "slow: slow tests requiring real GPU training",
    "loop: very slow full-loop tests",
    "ui: Playwright browser UI tests",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
